--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
         <!--boxicons link--->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Yuji+Mai&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Mogra&family=Yuji+Mai&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://upkg.com/boxicons@latest/css/boxicons.min.css">
-         <!--google fonts link-->
-        </title>
     </head>
+    <body>
+        <!--header section--->
+        <header>
+            <a href="#" class="logo"><spam>M</spam></a>
+            <ul class="teste">
+                <li><a href ="#" class="active">HOME</a></li>
+                <li><a href ="#">ABOUT ME</a></li>
+                <li><a href ="#">HOBBIES</a></li>
+                <li><a href ="#">FAVORITE FOODS</a></li>
+                <li><a href ="#">MY PETS</a></li>
+                <li><a href ="#">CONNECT WITH ME</a></li>
+
+
+
+            </ul>
+        </header>
+
+
+        <!--Custom js file link--->
+    </body>
 </html>
