--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-with,initial-scale=1">
-        <title> About_me website</title>
-        <link rel ="stylesheet"  type="text/css" href=""css/style.css">
-        <!--boxicons link--->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Mogra&family=Yuji+Mai&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://upkg.com/boxicons@latest/css/boxicons.min.css">
-    </head>
-    <body>
-        <!--header section--->
-        <header>
-            <a href="#" class="logo"><spam>M</spam></a>
-            <ul class="teste">
-                <li><a href ="#" class="active">HOME</a></li>
-                <li><a href ="#">ABOUT ME</a></li>
-                <li><a href ="#">HOBBIES</a></li>
-                <li><a href ="#">FAVORITE FOODS</a></li>
-                <li><a href ="#">MY PETS</a></li>
-                <li><a href ="#">CONNECT WITH ME</a></li>
+<html lang="pt-br">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About Me Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Mogra&family=Yuji+Mai&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://upkg.com/boxicons@latest/css/boxicons.min.css">
+</head>
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <a href="#" class="logo"><span></span></a>
+        <ul class="menu">
+            <li><a href="#" class="active">HOME</a></li>
+            <li><a href="#">ABOUT ME</a></li>
+            <li><a href="#">HOBBIES</a></li>
+            <li><a href="#">FAVORITE FOODS</a></li>
+            <li><a href="#">MY PETS</a></li>
+            <li><a href="#">CONNECT WITH ME</a></li>
+        </ul>
+    </header>
+
+    <!--sections-->
+    <section id="home"> </section>
+    <section id="about"> </section>
+    <section id="hobbies"> </section>
+    <section id="foods"> </section>
+    <section id="pets"> </section>]
+    <section id="connect"> </section>
 
 
-
-            </ul>
-        </header>
-
-
-        <!--Custom js file link--->
-    </body>
+</body>
 </html>
